--- a/MCP-Agentic-RAG-Docker/Agentic-RAG.ipynb
+++ b/MCP-Agentic-RAG-Docker/Agentic-RAG.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "652c46e2",
    "metadata": {},
    "outputs": [],
@@ -559,7 +559,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -573,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
